Create group user from preregistered user

--- a/app/views/group_registrations/new.html.haml
+++ b/app/views/group_registrations/new.html.haml
@@ -7,7 +7,7 @@
         Please fill out the fields below.
 .row
   .span10.offset1
-    =semantic_form_for(@user, :url => group_registrations_path, :method => :post)  do |form|
+    =semantic_form_for(@user, :url => group_registrations_path, :method => :post, :html => {:autocomplete => "off"})  do |form|
       =hidden_field_tag :return_to, params[:return_to]
       =form.hidden_field :group_invitation_id
       =form.hidden_field :seen_group_invitation_email_warning
