--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -1,5 +1,6 @@
 .comment{:class => "#{!comment.read_by?(current_user) ? 'unread' : ''}"}
-  =link_to(image_for_with_validation(comment.user, "32x32#"), (can?(:read,comment.user) ? comment.user : '#'), :class => "comment-image", :rel => 'tooltip', :title => (comment.user.street_name if current_user.try(:validated?)))
+  =link_to_with_tooltip(can?(:read,comment.user) ? comment.user : '#', :class => "comment-image") do
+    =image_for_with_validation(comment.user, "32x32#")
   .comment-text
     %b=comment.user
     =comment.text
