--- a/app/views/user_mailer/new_group_member.html.haml
+++ b/app/views/user_mailer/new_group_member.html.haml
@@ -2,9 +2,9 @@
 %html
   %body
     %p
-      ="Dear #{@group.owner.first_name},"
+      ="Dear #{@admin_email ? 'site admin' : @group.owner.first_name},"
     %p
-      ="#{@member} has joined your group <strong>#{@group}</strong>.".html_safe
+      ="#{@member} has joined #{@admin_email ? 'the' : 'your'} group <strong>#{@group}</strong>.".html_safe
     %p
       =link_to("View the group", group_url(@group))
     %p
