--- a/app/views/user_mailer/group_invitation.text.erb
+++ b/app/views/user_mailer/group_invitation.text.erb
@@ -5,7 +5,7 @@
 
 They left this message for you:
   
-<%=@group_invitation.message%>
+"<%=@group_invitation.message%>"
 <%end%>
 
 View the group: <%=group_invitation_ref_url(@group_invitation, :ref => @group_invitation.ref)%>
