--- a/app/views/pre_registrations/modals/_signup.html.haml
+++ b/app/views/pre_registrations/modals/_signup.html.haml
@@ -1,31 +1,16 @@
-=semantic_form_for(@pre_register_user ||= User.new, :url => pre_registrations_path, :remote => true) do |form|
-  =form.hidden_field :pre_register_need_or_offer, :id => 'pre_register_need_or_offer'
-  =form.hidden_field :ready_for_pre_register_signup, :id => 'ready_for_pre_register_signup'
-  =render("pre_registrations/modals/need", :form => form)
-  =render("pre_registrations/modals/general_offer", :form => form)
-  #pre-register-signup-fields{:class => "#{@pre_register_user.pre_register_need_or_offer_valid? ? '' : 'hide'}"}
-    .modal-header
-      %button{:type=>"button", :class=>"close", :"data-dismiss"=>"modal"}
-        ×
-      %h3
-        Join now
-    .modal-body
-      .preregister-form
-        %p.popup-intro
-          =neighbourhood_snippet_text(:preregister_popup_intro, "Enter your details below to get involved.")
-  
-          %form.form-horizontal
-            .control-group              
-              =form.input :postcode, :input_html => { :class=>'span2', :placeholder => "Postcode"}
-            .control-group
-              .controls
-                =form.input :full_name, :label => 'Name', :input_html => { :class=>'span4', :placeholder => "Name"}
-            .control-group
-              .controls
-                =form.input :email, :input_html => { :class=>'span4', :placeholder => "Email"}
-            .control-group
-              .controls
-                =form.commit_button "Signup", :button_html => {:data => {}, :class => "btn btn-primary btn-large", :id => "new-pre-registration-form-submit"}
-                =link_to "Already registered?", "/login", :class=>"already-registered-link"
-    .modal-footer
-      =link_to "Back", "#pre-register", :class=>"btn pull-left pre-register-back-link"
+=semantic_form_for(@pre_register_user ||= User.new, :url => pre_registrations_path, :remote => true, :class => 'preregister-form') do |form|
+  .modal-header
+    %button{:type=>"button", :class=>"close", :"data-dismiss"=>"modal"} ×
+    %h3 Join now
+  .modal-body
+    .preregister-form
+      %p.popup-intro
+        =neighbourhood_snippet_text(:preregister_popup_intro, "Enter your details below to get involved.")
+      =form.inputs(:class => 'form-horizontal') do
+        =form.input :postcode, :input_html => { :class=>'span2', :placeholder => "Postcode"}
+        =form.input :full_name, :label => 'Name', :input_html => { :class=>'span4', :placeholder => "Name"}
+        =form.input :email, :input_html => { :class=>'span4', :placeholder => "Email"}
+        =form.input :password, :label => 'Choose a password', :input_html => { :class=>'span4'}
+        =link_to "Already registered?", "/login", :class=>"already-registered-link pull-right"
+  .modal-footer
+    =form.commit_button "Next", :button_html => {:data => {}, :class => "btn btn-primary btn-large"}
