Show not_fully_registered modal for pre-registered users

--- a/app/views/home/_cycled_columns.html.haml
+++ b/app/views/home/_cycled_columns.html.haml
@@ -1,10 +1,10 @@
 .row#needs-cycle
   .span6
-    -if current_user.try(:group_user?)
-      =link_to "I'd like some help", '#', :class=>"btn call-to-action primary group-user-registration-link", :data => {:return_to => new_need_path}
-    -elsif current_user
+    -if current_user.try(:fully_registered?)
       =link_to "I'd like some help", new_need_path, :class=>"btn call-to-action primary"
-    -else              
+    -elsif current_user
+      =link_to "I'd like some help", '#', :class=>"btn call-to-action primary not-fully-registered-link", :data => {:return_to => new_need_path}
+    -else
       =link_to "I'd like some help", '#', :class=>"btn call-to-action primary pre-register-need-link"
       
     -if @general_offers.empty?
@@ -49,11 +49,11 @@
                     =general_offer.category.description
 
   .span6
-    -if current_user.try(:group_user?)
-      =link_to "I'd like to offer some help", '#', :class=>"btn call-to-action group-user-registration-link", :data => {:return_to => new_general_offer_path}
-    -elsif current_user
+    -if current_user.try(:fully_registered?)
       =link_to "I'd like to offer some help", new_general_offer_path, :class=>"btn call-to-action"
-    -else              
+    -elsif current_user
+      =link_to "I'd like to offer some help", '#', :class=>"btn call-to-action not-fully-registered-link", :data => {:return_to => new_general_offer_path}
+    -else
       =link_to "I'd like to offer some help", '#', :class=>"btn call-to-action pre-register-general-offer-link"
         
     %h2 Neighbours who need help
