--- a/app/views/needs/user_index.html.haml
+++ b/app/views/needs/user_index.html.haml
@@ -27,8 +27,8 @@
         You haven't asked for any help yet.
       .row
         .span6
-          -if current_user.try(:group_user?)
-            =link_to "I'd like some help", '#', :class=>"btn call-to-action primary group-user-registration-link", :data => {:return_to => new_need_path}
-          -else
+          -if current_user.fully_registered?
             =link_to "Add a request for help", new_need_path, :class=>"btn call-to-action primary"
+          -else
+            =link_to "I'd like some help", '#', :class=>"btn call-to-action primary not-fully-registered-link", :data => {:return_to => new_need_path}
 
