'Ne message' link on admin#index

--- a/app/views/admin/index.html.haml
+++ b/app/views/admin/index.html.haml
@@ -82,7 +82,7 @@
           Messages
         %ul.unstyled
           %li=link_to "View all messages", all_message_threads_path
-          %li=link_to "New page", new_page_path
+          %li=link_to "New message", new_message_path
   .row
     .span4
       .well
