--- a/app/views/groups/_header.html.haml
+++ b/app/views/groups/_header.html.haml
@@ -9,6 +9,8 @@
       -elsif current_user
         -if @group.can_join?(current_user)
           =link_to("Join this group", join_group_path(@group), :class => 'btn btn-large btn-primary mt-2')
+        -elsif @group.requests.exists?(:user_id => current_user.id)
+          =link_to("Your request has been sent", '#', :class => 'btn btn-large btn-primary mt-2 disabled')
         -else
           =link_to("Request to join this group", group_group_requests_path(@group), :class => 'btn btn-large btn-primary mt-2', :method => :post)
       -else
