--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -106,6 +106,22 @@ body, p {
   opacity: 0.7;
   filter: alpha(opacity=70);
 }
+.m-05 {
+  margin: 5px;
+}
+.ml-05 {
+  margin-left: 5px;
+}
+.mt-05 {
+  margin-top: 5px;
+}
+.mr-05 {
+  margin-right: 5px;
+}
+.mb-05 {
+  margin-bottom: 5px;
+}
+
 /*========== Forms ==========*/
 select[multiple='multiple']{
   width:620px;
