--- a/app/views/users/tabs/_notifications.html.haml
+++ b/app/views/users/tabs/_notifications.html.haml
@@ -1,4 +1,4 @@
 =form.inputs(:class => "form-horizontal user-notifications") do
   =form.input :no_notifications, :as => :radio, :label => 'Send me emails related to my requests, offers and groups', :collection => [['On', false], ['Off', true]]
   =form.input :no_private_messaging, :as => :radio, :label => 'Private messaging', :collection => [['On', false], ['Off', true]]
-  =form.input :email_for_new_message, :as => :radio, :label => 'Send me an email when I receive a new private message', :collection => [['On', false], ['Off', true]]
+  =form.input :email_for_new_message, :as => :radio, :label => 'Send me an email when I receive a new private message', :collection => [['On', true], ['Off', false]]
