--- a/app/views/wireframes/_group_new_modal.html.haml
+++ b/app/views/wireframes/_group_new_modal.html.haml
@@ -9,7 +9,7 @@
       %form.form-horizontal
         %label.radio
           %input#optionsRadios1{:checked => "", :name => "optionsRadios", :type => "radio", :value => "option1"}/
-          Public
+          Open
         %label.radio
           %input#optionsRadios2{:name => "optionsRadios", :type => "radio", :value => "option2"}/
           Private
