Change 'Create a group' to 'Join a group' on homepage

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -36,7 +36,7 @@
             =link_to_slug "Get involved", :get_involved, :class=>"home-cta home-cta-get-involved"
           -else
             =link_to "Join now", "#pre-register", :class=>"home-cta home-cta-get-involved", :"data-toggle"=>"modal"
-          =link_to "Create a group", groups_path, :class=>"home-cta home-cta-groups"
+          =link_to "Join a group", groups_path, :class=>"home-cta home-cta-groups"
           %span.badge#badge-groups-new NEW
 
 .container
