Show not_fully_registered modal on needs#show

--- a/app/views/needs/index.html.haml
+++ b/app/views/needs/index.html.haml
@@ -35,7 +35,7 @@
           -if current_user
             =link_to "I can help", need, :class=>"btn i-can-help-btn"
           -else
-            =link_to "I can help", "#register-popup", :class=>"btn i-can-help-btn", :'data-toggle' => "modal"
+            =link_to "I can help", "#pre-register", :class=>"btn i-can-help-btn", :'data-toggle' => "modal"
     .clearfix
 
 
