Prompt to complete registration on users#show

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -3,15 +3,20 @@
     .row
       .span3
         .user-thumbnail-large
-          =image_for_with_validation(@user, "220x")
+          =image_for_with_validation(@user, "220x", :class => 'mb-1')
           -if @user.validated?
             .validated-icon{ :rel => 'tooltip', :title =>"Address validated"}
-        %p=link_to(@user.image ? "Edit" : "Upload your own picture", edit_user_path(@user, :anchor => "who_you_are")) if can?(:edit, @user)
+        -if can?(:edit, @user)
+          =link_to(@user.image ? "Edit" : "+ Upload your own picture", edit_user_path(@user, :anchor => "who_you_are"))
         -if user != current_user
           =link_to(new_user_message_path(@user), :class => "btn mt-1")  do
             %i.icon-envelope
             &nbsp; Send message
   .span9
+    -if current_user == @user && !@user.fully_registered? && @user.neighbourhood
+      .alert
+        You're not fully registered. You can access more features if you
+        =link_to("complete your registration", new_registration_path)
     %h1.mb-1=title(@user)
     %h3.mb-1
       -if @user.is_community_champion?
