--- a/app/views/groups/_header.html.haml
+++ b/app/views/groups/_header.html.haml
@@ -6,6 +6,9 @@
     -if !@group.has_member?(current_user)
       -if @group_invitation && @group_invitation.user.nil?
         =link_to("Join this group", new_group_invitation_group_registration_path(@group_invitation), :class => 'btn btn-large btn-primary mt-2')
+      -elsif current_user.try(:pre_registration?)
+        -return_to_url = @group.private? ? group_path(@group) : join_group_path(@group)
+        =link_to("#{@group.private? ? 'Request to join' : 'Join'} this group", new_group_registration_path(:return_to => return_to_url), :class => 'btn btn-large btn-primary mt-2')
       -elsif current_user
         -if @group.can_join?(current_user)
           =link_to("Join this group", join_group_path(@group), :class => 'btn btn-large btn-primary mt-2')
