Track google analytics for join now popup

--- a/app/views/pre_registrations/_modal_form.html.haml
+++ b/app/views/pre_registrations/_modal_form.html.haml
@@ -18,6 +18,6 @@
         =neighbourhood_snippet_text(:preregistration_intro, "Ask your neighbours for help, or help them out.")
         =link_to "I'd like some help", '#', :class => "btn call-to-action primary", :id => 'pre-register-need-link'
         =link_to "I'd like to offer some help", '#', :class => "btn call-to-action", :id => 'pre-register-general-offer-link'
-        =link_to "I'd like to join a group", groups_path, :class => "btn call-to-action group"        
+        =link_to "I'd like to join a group", groups_path, :class => "btn call-to-action group", :id => 'pre-register-groups-link'
     .modal-footer
       =link_to "Skip", @next_url, :class => "pull-right btn"
