Fix permissions for /users, log user out when they delete their account

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2021,3 +2021,8 @@ h2.messages-title {
 body.controller_groups form .register-tab-pane {
   padding-top: 40px;
 }
+
+/*=============  Manage users ===================*/
+.nav-tabs-users li a{
+  padding: 8px 10px;
+}
