--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -7,7 +7,7 @@
       Download spreadsheet
 .row
   .span12
-    %ul.nav.nav-tabs
+    %ul.nav.nav-tabs.nav-tabs-users
       %li.active
         =link_to '#unvalidated', :'data-toggle' => 'tab' do
           Unvalidated
