Fix for new registration email

--- a/app/views/user_mailer/new_registration.text.erb
+++ b/app/views/user_mailer/new_registration.text.erb
@@ -16,7 +16,7 @@ PLEASE NOTE: None of your details will be displayed on the site until you ask fo
 
 <%=Settings.site_name%> is going live at different times in different streets, depending on when there are enough of your neighbours online to help you. Any help you can give by telling your friends and neighbours about <%=Settings.site_name%> will be much appreciated! You can find us on Facebook <%=Settings.facebook_url%> and Twitter <%=Settings.twitter_url%>
 
-Please feel free to contact us for any information and we thank you for any comments you might give on our developing website <%=feedback_url%>
+Please feel free to contact us for any information and we thank you for any comments you might give on our developing website <%="#{Settings.site_url}/feedback"%>
 
 Thanks again you for your interest; we will be back in touch soon!
 
